--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,17 @@ android {
         }
     }
 
+    splits {
+        abi {
+            enable true
 
+            reset()
+
+            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+
+            universalApk true
+        }
+    }
 
     buildTypes {
         release {
