--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.1'
+        kotlinCompilerExtensionVersion '1.3.2'
     }
     packagingOptions {
         resources {
@@ -79,12 +79,12 @@ dependencies {
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "com.quickbirdstudios:opencv-contrib:4.5.3.0"
-    implementation "androidx.exifinterface:exifinterface:1.3.3"
-    implementation 'androidx.camera:camera-lifecycle:1.2.0-beta01'
-    implementation 'androidx.camera:camera-view:1.2.0-beta01'
-    implementation "androidx.camera:camera-camera2:1.2.0-beta01"
+    implementation "androidx.exifinterface:exifinterface:1.3.5"
+    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha01'
+    implementation 'androidx.camera:camera-view:1.3.0-alpha01'
+    implementation "androidx.camera:camera-camera2:1.3.0-alpha01"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     implementation 'androidx.preference:preference-ktx:1.2.0'
@@ -97,8 +97,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.25.1"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
