--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
     packagingOptions {
         resources {
@@ -71,9 +71,9 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material:1.3.1"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
 
     //noinspection GradleDependency
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
@@ -81,10 +81,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "com.quickbirdstudios:opencv-contrib:4.5.3.0"
-    implementation "androidx.exifinterface:exifinterface:1.3.5"
-    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha01'
-    implementation 'androidx.camera:camera-view:1.3.0-alpha01'
-    implementation "androidx.camera:camera-camera2:1.3.0-alpha01"
+    implementation "androidx.exifinterface:exifinterface:1.3.6"
+    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha04'
+    implementation 'androidx.camera:camera-view:1.3.0-alpha04'
+    implementation "androidx.camera:camera-camera2:1.3.0-alpha04"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     implementation 'androidx.preference:preference-ktx:1.2.0'
@@ -97,8 +97,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.25.1"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
