--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.littletrickster.scanner"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 4
         versionName "1.03"
 
@@ -62,9 +62,10 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.7'
+        kotlinCompilerExtensionVersion '1.5.11'
     }
     packagingOptions {
         resources {
@@ -76,30 +77,30 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:1.4.3"
+    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:1.4.3"
+    implementation "androidx.compose.material:material-icons-extended:1.6.5"
 
-    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.2"
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.3"
 
     implementation project(path: ':opencv')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.activity:activity-compose:1.8.2'
 //    implementation "com.quickbirdstudios:opencv-contrib:4.5.3.0"
-    implementation "androidx.exifinterface:exifinterface:1.3.6"
-    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha06'
-    implementation 'androidx.camera:camera-view:1.3.0-alpha06'
-    implementation "androidx.camera:camera-camera2:1.3.0-alpha06"
+    implementation "androidx.exifinterface:exifinterface:1.3.7"
+    implementation 'androidx.camera:camera-lifecycle:1.3.2'
+    implementation 'androidx.camera:camera-view:1.3.2'
+    implementation "androidx.camera:camera-camera2:1.3.2"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 
-    implementation 'com.tom-roush:pdfbox-android:2.0.9.0'
+    implementation 'com.tom-roush:pdfbox-android:2.0.27.0'
 
 
-    implementation "com.google.accompanist:accompanist-permissions:0.25.1"
+    implementation "com.google.accompanist:accompanist-permissions:0.34.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
